--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wg",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ibulavsky.github.io/wg",
   "dependencies": {
     "@csstools/normalize.css": "^12.0.0",
     "@testing-library/jest-dom": "^5.15.0",
@@ -14,7 +15,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -33,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "postcss-normalize": "^10.0.1"
   }
 }
